<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:background="@color/primaryDarkColor"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_movie"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_in_theaters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_theaters"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_extra_xl_small"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_slider"/>

    <TextView
        android:id="@+id/tv_on_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_tv"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_extra_xl_small"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/tv_in_theaters"
        app:layout_constraintTop_toBottomOf="@+id/cv_slider"/>

</androidx.constraintlayout.widget.ConstraintLayout>