<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailActivity"
    android:background="@color/primaryDarkColor">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_back_drop"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/back_drop" />

                <ImageView
                    android:id="@+id/img_back_button"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/circle_transparent_black_background"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/back_arrow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/back_button" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_movie_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/primaryColor"
                    android:layout_marginTop="220dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_overview"
                        android:textSize="@dimen/default_text_size"
                        android:paddingTop="150dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="15dp"
                        android:textColor="@color/color_grey"/>


                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:paddingStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:translationZ="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_poster"
                        android:layout_width="130dp"
                        android:layout_height="200dp"
                        android:contentDescription="poster"
                        android:transitionName="img_poster"
                        android:src="@mipmap/placeholder"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        android:paddingEnd="30dp"
                        android:paddingTop="80dp">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title"
                            android:textSize="@dimen/text_size_medium"
                            android:transitionName="transition_title"
                            android:textColor="@color/white"
                            android:layout_marginBottom="10dp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="10dp">

                            <TextView
                                android:id="@+id/tv_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:text="7"
                                android:textColor="@color/white"
                                android:gravity="center"
                                android:layout_marginEnd="10dp"/>

                            <RatingBar
                                android:id="@+id/rt_bar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:max="5"
                                android:numStars="5"
                                android:rating="3"
                                android:progressTint="@color/color_yellow"
                                android:isIndicator="true"
                                style="?android:attr/ratingBarStyleSmall"
                                android:layout_gravity="center"/>
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poster"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:textStyle="bold"
                android:paddingTop="15dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/poster_item"
                android:scrollbars="horizontal"/>

            <TextView
                android:id="@+id/tv_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailer"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:textStyle="bold"
                android:paddingTop="15dp"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtubePlayerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:autoPlay="false"
                app:handleNetworkEvents="false"
                app:enableAutomaticInitialization="false"
                android:padding="15dp"/>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>